# app-activate

./: Cargo.toml  README.md  config.toml
.cargo/: config.toml
src/: app_activator.rs  args.rs  config.rs  hotkey_manager.rs  launchd_manager.rs  lib.rs  main.rs  reporter.rs  usage_reporter.rs
xtask/: Cargo.toml
xtask/src/: main.rs
