[package]
name = "app-activate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive", "env", "wrap_help"] }
cmd_lib = "1.9.5"
dirs = "5.0.1"
env_logger = "0.11.5"
global-hotkey = "0.6.2"
log = "0.4.22"
notify = "7.0.0"
open = "5.3.0"
serde = "1.0.213"
toml = "0.8.19"
winit = "0.29.15"
xdg = "2.5.2"
