[package]
name = "app-activate"
version = "0.5.0"
edition = "2021"
description = "A minimal application launcher, just for my needs."

[dependencies]
# Error handling
anyhow = "1.0.92"

# CLI parsing
clap = { version = "4.5.20", features = ["derive"] }

# Run shell command easily
cmd_lib = "1.9.5"

# Home and XDG directories. Could be consolidated
dirs = "5.0.1"
xdg = "2.5.2"

# Logging
env_logger = { version = "0.11.5", default-features = false, features = ["humantime"] }
log = "0.4.22"

# Event loop, hotkey registration and management, and open app
winit = { version = "0.30.5", default-features = false, features = ["rwh_06"] }
global-hotkey = { version = "0.6.3", default-features = false }
open = "5.3.0"

# File system watcher
notify = "7.0.0"

# Ser/de
serde = "1.0.214"
toml = { version = "0.8.19", default-features = false, features = ["parse"] }

# SQLite3 for logging and reporting
rusqlite = { version = "0.32.1", features = ["bundled"] }

# Reporting
prettytable-rs = { version = "0.10.0", default-features = false }

# Date and time
jiff = "0.1.14"

[profile.release]
# For speed. See also .cargo/config.toml
lto = true
codegen-units = 1
panic = "abort"
