[package]
name = "app-activate"
version.workspace = true
edition.workspace = true
description = "A minimal application launcher, just for my needs."
default-run = "app-activate"

[[bin]]
name = "app-activate"
path = "src/main.rs"

[[bin]]
name = "app-activate-reporter"
path = "src/reporter.rs"

[workspace]
members = ["xtask"]

[workspace.package]
version = "0.7.4"
edition = "2024"

[workspace.dependencies]
# Error handling
anyhow = "1.0.99"

# CLI parsing
clap = { version = "4.5.47", features = ["derive"] }

# Run shell command easily
cmd_lib = "2.0.0"

# Logging
env_logger = { version = "0.11.8", default-features = false, features = ["humantime"] }
log = "0.4.28"

[dependencies]
# Error handling
anyhow.workspace = true

# CLI parsing
clap.workspace = true

# Run shell command easily
cmd_lib.workspace = true

# Home and XDG directories. Could be consolidated
dirs = "6.0.0"
xdg = "3.0.0"

# Logging
env_logger.workspace = true
log.workspace = true

# Event loop, hotkey registration and management, and open app
winit = { version = "0.30.12", default-features = false, features = ["rwh_06"] }
global-hotkey = { version = "0.7.0", default-features = false }
open = "5.3.2"

# File system watcher
notify = "8.2.0"

# Ser/de
serde = "1.0.219"
toml = { version = "0.9.5", default-features = false, features = ["parse", "serde"] }

# SQLite3 for logging and reporting
rusqlite = { version = "0.37.0", features = ["bundled"] }

# Date and time
jiff = "0.2.15"

[profile.release]
# For speed. See also .cargo/config.toml
lto = true
codegen-units = 1
panic = "abort"
